[package]
name = "my_sol_data"
version = "0.1.0"
description = "Created with Anchor By Christoper Chee"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_sol_data"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
